add_subdirectory(./lib/googletest)
set(gtest_SOURCE_DIR, ./lib/googletest/)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(SOURCE_FILES runAllTests.cpp TestFile.cpp TestLoadResources.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/Users/mircoceccarelli/ClionProjects/EsLaboratorio/risorse")
add_executable(runAllTests ${SOURCE_FILES})
target_link_libraries(runAllTests gtest gtest_main core)